--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		var pagetable = {
     "opmlUrl": "https://dl.dropbox.com/s/gm4gdb9hout8unx/myBlog.opml",
     "opmlTitle": "KR Blog",
-    "opmlDateModified": "Tue, 01 Jul 2014 01:47:55 GMT",
-    "opmlExpansionState": "",
+    "opmlDateModified": "Tue, 01 Jul 2014 02:25:57 GMT",
+    "opmlExpansionState": "1,2,3,4",
     "opmlLink": "http://kevinraymond.smallpict.com/",
     "opmlFlCmsRender": "true",
     "opmlFlCmsRenderInBackground": "true",
@@ -67,7 +67,7 @@
     "flFixedMenu": "false",
     "maxStreamDays": "14",
     "text": "Kevin Raymond's Blog",
-    "created": "Tue, 01 Jul 2014 01:47:55 GMT",
+    "created": "Tue, 01 Jul 2014 02:25:57 GMT",
     "description": "",
     "path": "",
     "subheadColor": "white",
@@ -85,7 +85,7 @@
     "flEmojify": "true",
     "cssUrl": "http://static.smallpicture.com/bootswatch/readable/bootstrap.min.css",
     "menuTitle": "Kevin Raymond's Blog",
-    "now": "Mon Jun 30 2014 21:47:55 GMT-0400 (EDT)",
+    "now": "Mon Jun 30 2014 22:25:57 GMT-0400 (EDT)",
     "copyright": "&copy; 2014 Kevin Raymond.",
     "url": "http://kevinraymond.smallpict.com/.html"
 }; //12/12/13 by DW
@@ -169,7 +169,7 @@
 				<div class="divFargoBlogHome">
 	<div class="divBlogHomeItem">
 		<div class="divBlogHomeItemTitle"><a href="2014/06/30/testingMyNewGithubPage.html">Testing My New Github Page</a></div>
-		
+		<p>After some frustration and Googling I have finally rendered, committed and synced the blog to <a href="https://github.com">Github</a> Pages. Yeahhhh!!!!</p>
 		<div class="divBlogHomeStoryDate">
 			<span class="spFargoStoryDate">06/30/14; 04:34:53 PM</span>
 			<div class="divFargoStoryLink" style="float: left;"><a href="2014/06/30/testingMyNewGithubPage.html"><i class="fa fa-star"></i></a></div>
@@ -261,9 +261,9 @@
 
 				<div class="divFooterText">
 					<hr>
-					<p style="float: right;">Last built: Mon, Jun 30, 2014 at  8:47 PM</p>
-					<script>var disqus_identifier = "https://dl.dropbox.com/s/gm4gdb9hout8unx/myBlog.opmlTue, 01 Jul 2014 01:47:55 GMT";</script><a onclick="showHideComments ()"><span id="idShowHideComments" style="cursor: pointer;"></span></a><div class="divDisqusComments" id="idDisqusComments" style="visibility: visible;" ><div id="disqus_thread"></div></div><script type="text/javascript" src="http://disqus.com/forums/smallpict/embed.js"></script></div>
-					<div class="divByline" id="idByline">By <a href="" target="_blank">Kevin Raymond</a>, <span id="idWhenCreated">Monday, June 30, 2014 at  8:47 PM</span>.</div>
+					<p style="float: right;">Last built: Mon, Jun 30, 2014 at  9:25 PM</p>
+					<script>var disqus_identifier = "https://dl.dropbox.com/s/gm4gdb9hout8unx/myBlog.opmlTue, 01 Jul 2014 02:25:57 GMT";</script><a onclick="showHideComments ()"><span id="idShowHideComments" style="cursor: pointer;"></span></a><div class="divDisqusComments" id="idDisqusComments" style="visibility: visible;" ><div id="disqus_thread"></div></div><script type="text/javascript" src="http://disqus.com/forums/smallpict/embed.js"></script></div>
+					<div class="divByline" id="idByline">By <a href="" target="_blank">Kevin Raymond</a>, <span id="idWhenCreated">Monday, June 30, 2014 at  9:25 PM</span>.</div>
 					</div>
 				</div>
 			</div>
