--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		var pagetable = {
     "opmlUrl": "https://dl.dropbox.com/s/gm4gdb9hout8unx/myBlog.opml",
     "opmlTitle": "KR Blog",
-    "opmlDateModified": "Tue, 01 Jul 2014 02:25:57 GMT",
+    "opmlDateModified": "Tue, 01 Jul 2014 03:50:43 GMT",
     "opmlExpansionState": "1,2,3,4",
     "opmlLink": "http://kevinraymond.smallpict.com/",
     "opmlFlCmsRender": "true",
@@ -43,7 +43,7 @@
     "domain": "",
     "bootstrapTheme": "readable",
     "type": "bloghome",
-    "slogan": "You should never argue with a crazy man.",
+    "slogan": "Still diggin!",
     "disqusGroupName": "smallpict",
     "siteTimeZone": "-5",
     "dateFormat": "%A, %B %e, %Y at %l:%M %p",
@@ -67,7 +67,7 @@
     "flFixedMenu": "false",
     "maxStreamDays": "14",
     "text": "Kevin Raymond's Blog",
-    "created": "Tue, 01 Jul 2014 02:25:57 GMT",
+    "created": "Tue, 01 Jul 2014 03:50:43 GMT",
     "description": "",
     "path": "",
     "subheadColor": "white",
@@ -85,7 +85,7 @@
     "flEmojify": "true",
     "cssUrl": "http://static.smallpicture.com/bootswatch/readable/bootstrap.min.css",
     "menuTitle": "Kevin Raymond's Blog",
-    "now": "Mon Jun 30 2014 22:25:57 GMT-0400 (EDT)",
+    "now": "Mon Jun 30 2014 23:50:44 GMT-0400 (EDT)",
     "copyright": "&copy; 2014 Kevin Raymond.",
     "url": "http://kevinraymond.smallpict.com/.html"
 }; //12/12/13 by DW
@@ -261,9 +261,9 @@
 
 				<div class="divFooterText">
 					<hr>
-					<p style="float: right;">Last built: Mon, Jun 30, 2014 at  9:25 PM</p>
-					<script>var disqus_identifier = "https://dl.dropbox.com/s/gm4gdb9hout8unx/myBlog.opmlTue, 01 Jul 2014 02:25:57 GMT";</script><a onclick="showHideComments ()"><span id="idShowHideComments" style="cursor: pointer;"></span></a><div class="divDisqusComments" id="idDisqusComments" style="visibility: visible;" ><div id="disqus_thread"></div></div><script type="text/javascript" src="http://disqus.com/forums/smallpict/embed.js"></script></div>
-					<div class="divByline" id="idByline">By <a href="" target="_blank">Kevin Raymond</a>, <span id="idWhenCreated">Monday, June 30, 2014 at  9:25 PM</span>.</div>
+					<p style="float: right;">Last built: Mon, Jun 30, 2014 at 10:50 PM</p>
+					<script>var disqus_identifier = "https://dl.dropbox.com/s/gm4gdb9hout8unx/myBlog.opmlTue, 01 Jul 2014 03:50:43 GMT";</script><a onclick="showHideComments ()"><span id="idShowHideComments" style="cursor: pointer;"></span></a><div class="divDisqusComments" id="idDisqusComments" style="visibility: visible;" ><div id="disqus_thread"></div></div><script type="text/javascript" src="http://disqus.com/forums/smallpict/embed.js"></script></div>
+					<div class="divByline" id="idByline">By <a href="" target="_blank">Kevin Raymond</a>, <span id="idWhenCreated">Monday, June 30, 2014 at 10:50 PM</span>.</div>
 					</div>
 				</div>
 			</div>
