--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		var pagetable = {
     "opmlUrl": "https://dl.dropbox.com/s/gm4gdb9hout8unx/myBlog.opml",
     "opmlTitle": "KR Blog",
-    "opmlDateModified": "Tue, 01 Jul 2014 03:50:43 GMT",
-    "opmlExpansionState": "1,2,3,4",
+    "opmlDateModified": "Tue, 01 Jul 2014 15:14:56 GMT",
+    "opmlExpansionState": "1,2,3,4,18,19,20,25,26,27,28",
     "opmlLink": "http://kevinraymond.smallpict.com/",
     "opmlFlCmsRender": "true",
     "opmlFlCmsRenderInBackground": "true",
@@ -43,7 +43,7 @@
     "domain": "",
     "bootstrapTheme": "readable",
     "type": "bloghome",
-    "slogan": "Still diggin!",
+    "slogan": "So, it has come to this.",
     "disqusGroupName": "smallpict",
     "siteTimeZone": "-5",
     "dateFormat": "%A, %B %e, %Y at %l:%M %p",
@@ -67,7 +67,7 @@
     "flFixedMenu": "false",
     "maxStreamDays": "14",
     "text": "Kevin Raymond's Blog",
-    "created": "Tue, 01 Jul 2014 03:50:43 GMT",
+    "created": "Tue, 01 Jul 2014 15:14:56 GMT",
     "description": "",
     "path": "",
     "subheadColor": "white",
@@ -85,7 +85,7 @@
     "flEmojify": "true",
     "cssUrl": "http://static.smallpicture.com/bootswatch/readable/bootstrap.min.css",
     "menuTitle": "Kevin Raymond's Blog",
-    "now": "Mon Jun 30 2014 23:50:44 GMT-0400 (EDT)",
+    "now": "Tue Jul 01 2014 11:14:56 GMT-0400 (EDT)",
     "copyright": "&copy; 2014 Kevin Raymond.",
     "url": "http://kevinraymond.smallpict.com/.html"
 }; //12/12/13 by DW
@@ -167,6 +167,37 @@
 					<h2 id="idBlogHomePageTitle">Kevin Raymond's Blog</h2>
 					</div>
 				<div class="divFargoBlogHome">
+	<div class="divBlogHomeItem">
+		<div class="divBlogHomeItemTitle"><a href="2014/07/01/thePersonalWebsiteBattleContinues.html">The Personal Website Battle Continues</a></div>
+		<p><img src="https://dl.dropbox.com/s/lmyqoub545xcuoj/The%20Battle.jpg" alt="" title="" /></p>
+
+<p>After some careful reading of the <a href="http://fargo.io/docs/contentManagement/usingGithub.html">directions</a>, a few hours of missteps and some coffee. I successfully used <a href="https://github.com/">Github</a> Pages to host my Fargo blog at <a href="http://kevinraymond.net/">kevinraymond.net</a>. </p>
+
+<p><strong>A few things I learned....</strong></p>
+
+<ol>
+<li><p><strong>In Github, committing is kinda like publishing.</strong> Once you have rendered the pages in Fargo, they are added to the folder in your Dropbox ( if you have added, #siteFolder "username.github.io" in your outline. It's in the directions.) and ready to be committed in the Github program on your Mac or Windows machine.</p></li>
+<li><p><strong>I use a Chromebook</strong>, but have a Windows computer at work which I can log into anytime I need. Therefore, I can render my pages and go to my Windows machine remotely to commit them in the Github program. I guess this is what you would call a work around.</p></li>
+<li><p><strong>Reading directions is key</strong>. So read them <a href="http://fargo.io/docs/contentManagement/usingGithub.html">here</a>.</p></li>
+<li><p><strong>Patience is your friend.</strong> One of the main reasons I got so frustrated was my lack of patience for things to reconcile on the server etc. Waiting 10 minutes was like an eternity. I blame society for this. I think the best pet detective in the biz, Ace Ventura said it best, "If I'm not back in five minutes. Just wait longer."</p></li>
+</ol>
+
+<p>The excitement of the accomplishment was euphoric. Strange for something so simple. I have basic computing skills, but this was my first venture into something this tricky. And honestly, it wasn't difficult after taking the time to check all my steps. </p>
+
+<p>However.....</p>
+
+<p>Now I am wondering if hosting a regular site at kevinraymond.net is better and using something like blog.kevinraymond.net for the blog, which would be hosted through Github. I have no idea if this makes sense or if I am being a non savvy computer person. ( Apologies for lack of terminology if you're reading this and live in the computing world. I fabricate sheet metal for a living so I am kind of a layman)</p>
+
+<p>Anyway. My thought is, I could host the main site, giving me the ability to create sub pages like blog.kevinraymond.net and links.kevinraymond.net for my Fargo blog and link page. </p>
+
+<p>Am I on the right track? I realize there are so many ways to get a site started. I am hoping to keep it low cost and use my brain to figure some things out. Plus, it's fun. </p>
+
+<p>If you have any suggestions please leave them in the comments or tweet me <a href="http://twitter.com/KevRaymond">@KevRaymond</a>. Thanks!</p>
+		<div class="divBlogHomeStoryDate">
+			<span class="spFargoStoryDate">07/01/14; 07:51:26 AM</span>
+			<div class="divFargoStoryLink" style="float: left;"><a href="2014/07/01/thePersonalWebsiteBattleContinues.html"><i class="fa fa-star"></i></a></div>
+			</div>
+		</div>
 	<div class="divBlogHomeItem">
 		<div class="divBlogHomeItemTitle"><a href="2014/06/30/testingMyNewGithubPage.html">Testing My New Github Page</a></div>
 		<p>After some frustration and Googling I have finally rendered, committed and synced the blog to <a href="https://github.com">Github</a> Pages. Yeahhhh!!!!</p>
@@ -252,7 +283,7 @@
 		</div>
 	<div class="divBlogHomeItem">
 		<div class="divBlogHomeItemTitle"><a href="theDeets.html">The Deets</a></div>
-		
+		<p>This is my about me page which if you have not noticed is not yet complete.</p>
 		<div class="divBlogHomeStoryDate">
 			<span class="spFargoStoryDate">06/28/14; 11:38:58 AM</span>
 			<div class="divFargoStoryLink" style="float: left;"><a href="theDeets.html"><i class="fa fa-star"></i></a></div>
@@ -261,9 +292,9 @@
 
 				<div class="divFooterText">
 					<hr>
-					<p style="float: right;">Last built: Mon, Jun 30, 2014 at 10:50 PM</p>
-					<script>var disqus_identifier = "https://dl.dropbox.com/s/gm4gdb9hout8unx/myBlog.opmlTue, 01 Jul 2014 03:50:43 GMT";</script><a onclick="showHideComments ()"><span id="idShowHideComments" style="cursor: pointer;"></span></a><div class="divDisqusComments" id="idDisqusComments" style="visibility: visible;" ><div id="disqus_thread"></div></div><script type="text/javascript" src="http://disqus.com/forums/smallpict/embed.js"></script></div>
-					<div class="divByline" id="idByline">By <a href="" target="_blank">Kevin Raymond</a>, <span id="idWhenCreated">Monday, June 30, 2014 at 10:50 PM</span>.</div>
+					<p style="float: right;">Last built: Tue, Jul  1, 2014 at 10:14 AM</p>
+					<script>var disqus_identifier = "https://dl.dropbox.com/s/gm4gdb9hout8unx/myBlog.opmlTue, 01 Jul 2014 15:14:56 GMT";</script><a onclick="showHideComments ()"><span id="idShowHideComments" style="cursor: pointer;"></span></a><div class="divDisqusComments" id="idDisqusComments" style="visibility: visible;" ><div id="disqus_thread"></div></div><script type="text/javascript" src="http://disqus.com/forums/smallpict/embed.js"></script></div>
+					<div class="divByline" id="idByline">By <a href="" target="_blank">Kevin Raymond</a>, <span id="idWhenCreated">Tuesday, July  1, 2014 at 10:14 AM</span>.</div>
 					</div>
 				</div>
 			</div>
