--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		var pagetable = {
     "opmlUrl": "https://dl.dropbox.com/s/gm4gdb9hout8unx/myBlog.opml",
     "opmlTitle": "KR Blog",
-    "opmlDateModified": "Thu, 03 Jul 2014 17:12:10 GMT",
-    "opmlExpansionState": "1,2,3,4,28,29,43,44,45,50,51,52",
+    "opmlDateModified": "Sat, 05 Jul 2014 18:05:14 GMT",
+    "opmlExpansionState": "1,2,3,4,17,18,23,24,25",
     "opmlLink": "http://kevinraymond.smallpict.com/",
     "opmlFlCmsRender": "true",
     "opmlFlCmsRenderInBackground": "true",
@@ -43,7 +43,7 @@
     "domain": "",
     "bootstrapTheme": "readable",
     "type": "bloghome",
-    "slogan": "When in doubt, blog.",
+    "slogan": "Ask not what the Internet can do for you...",
     "disqusGroupName": "smallpict",
     "siteTimeZone": "-5",
     "dateFormat": "%A, %B %e, %Y at %l:%M %p",
@@ -67,7 +67,7 @@
     "flFixedMenu": "false",
     "maxStreamDays": "14",
     "text": "Kevin Raymond's Blog",
-    "created": "Thu, 03 Jul 2014 17:12:10 GMT",
+    "created": "Sat, 05 Jul 2014 18:05:14 GMT",
     "description": "",
     "path": "",
     "subheadColor": "white",
@@ -85,7 +85,7 @@
     "flEmojify": "true",
     "cssUrl": "http://static.smallpicture.com/bootswatch/readable/bootstrap.min.css",
     "menuTitle": "Kevin Raymond's Blog",
-    "now": "Thu Jul 03 2014 13:12:10 GMT-0400 (EDT)",
+    "now": "Sat Jul 05 2014 14:05:14 GMT-0400 (EDT)",
     "copyright": "&copy; 2014 Kevin Raymond.",
     "url": "http://kevinraymond.smallpict.com/.html"
 }; //12/12/13 by DW
@@ -166,6 +166,32 @@
 					<h2 id="idBlogHomePageTitle">Kevin Raymond's Blog</h2>
 					</div>
 				<div class="divFargoBlogHome">
+	<div class="divBlogHomeItem">
+		<div class="divBlogHomeItemTitle"><a href="2014/07/05/takeawayaFromMyFirstOutdoorPhishShowInYears.html">Takeaways From My First Outdoor Phish Show in Years</a></div>
+		<p><center><img src="https://dl.dropbox.com/s/ztrblu1ridldv1k/Photo%20Jul%2005%2C%201%2017%2016%20PM.jpg" alt="" title="" /></center></p>
+
+<p>I am a fan of Phish, not a Phish fan. Meaning, I enjoy the music. Mainly because I play the guitar and enjoy when the band is playing really well. I like to hear how Trey comes in and out, leaving space for the others but, also taking the jam his way. Plus, I LOVE his guitar. Honestly, I want <a href="http://www.languedocguitars.com/">one</a>.</p>
+
+<p><center><img src="https://dl.dropbox.com/s/zstpy1rj7ihlji4/Photo%20Feb%2003%2C%201%2006%2038%20PM.jpg" alt="" title="" /></center></p>
+
+<p>A Phish fan is the "all in" individual who loves the music and everything that goes with the culture of all that is Phish. I am amazed by the analytic nature of a Phish fan. The ability to remember intricate sections of tunes from tours past is fascinating. Knowing when the band is changing from song to song, note to note and comparing it to a show from the 90's. They all have minds like steel traps when it comes to the band they love. </p>
+
+<p>Obviously, there are the newbies, riff raff and the most interesting takeaway for me. The entrepreneurs, who seem to have built a traveling flea market. This was not around when I went to Phish shows in the 90's at SPAC. T-shirt salesman, drug pushers, pipes etc. were present and they would come around with a back pack or whatever. But the vibe was more about the community of fans coming together, haveing some drinks, a toke or 20 and enjoying the show. Now the "lot scene" is a village of tents and food trucks selling everything from pizza to tie dye sneakers.  </p>
+
+<p>The food looked delicious and I did enjoy a Chimechanga from the <a href="http://esperantosaratoga.com/">Esperanto</a> food truck. Which kinda makes my point. A local restaurant never would have parked a food truck in the lot during shows past. Yesterday there were many and details the acceptance of Phish culture locally and probably the rise of the food truck. I have no problem with the selling of things. My interest was more about how prevalent the flea market aspect had become. </p>
+
+<p>Like I said, I am a fan of Phish and don't frequent shows around the country. I catch local shows. Therefore, I've missed a lot of the band and fan base evolution. This has probably gone on for years and by the comments I was getting from my friends--Phish fans--it seems to have been going on a long time.</p>
+
+<p>All in all the show was terrific. I have not heard the newer songs and was lost during some of the jams, I was happy with Reba, 46 Days and especially the Character Zero closer. Apparently they also played Down With Disease, a favorite, which I am failing to remember. I bought some moonshine at the flea market--could be the reason--and realized my age of 36 this morning. Gotta learn when to say no <img title=':blush:' alt=':blush:' class='emoji' src='http://fargo.io/code/emojify/images/emoji/blush.png' align='absmiddle' />. Here is the <a href="http://phish.net/setlists/?d=2014-07-04">full setlist</a>.</p>
+
+<p>The best part, as always, is hanging out with your best friends, enjoying music and people you love.</p>
+
+<p>The best takeaway for me.</p>
+		<div class="divBlogHomeStoryDate">
+			<span class="spFargoStoryDate">07/05/14; 11:40:48 AM</span>
+			<div class="divFargoStoryLink" style="float: left;"><a href="2014/07/05/takeawayaFromMyFirstOutdoorPhishShowInYears.html"><i class="fa fa-star"></i></a></div>
+			</div>
+		</div>
 	<div class="divBlogHomeItem">
 		<div class="divBlogHomeItemTitle"><a href="2014/07/03/theNewWebsiteIsUpAndRunning.html">The New Website is Up!</a></div>
 		<p><center><img src="https://dl.dropbox.com/s/z9b1lca14rawjay/Bruins%20Cheering.jpg" alt="" title="" /></center></p>
@@ -333,9 +359,9 @@
 
 				<div class="divFooterText">
 					<hr>
-					<p style="float: right;">Last built: Thu, Jul  3, 2014 at 12:12 PM</p>
-					<script>var disqus_identifier = "https://dl.dropbox.com/s/gm4gdb9hout8unx/myBlog.opmlThu, 03 Jul 2014 17:12:10 GMT";</script><a onclick="showHideComments ()"><span id="idShowHideComments" style="cursor: pointer;"></span></a><div class="divDisqusComments" id="idDisqusComments" style="visibility: visible;" ><div id="disqus_thread"></div></div><script type="text/javascript" src="http://disqus.com/forums/smallpict/embed.js"></script></div>
-					<div class="divByline" id="idByline">By <a href="" target="_blank">Kevin Raymond</a>, <span id="idWhenCreated">Thursday, July  3, 2014 at 12:12 PM</span>.</div>
+					<p style="float: right;">Last built: Sat, Jul  5, 2014 at  1:05 PM</p>
+					<script>var disqus_identifier = "https://dl.dropbox.com/s/gm4gdb9hout8unx/myBlog.opmlSat, 05 Jul 2014 18:05:14 GMT";</script><a onclick="showHideComments ()"><span id="idShowHideComments" style="cursor: pointer;"></span></a><div class="divDisqusComments" id="idDisqusComments" style="visibility: visible;" ><div id="disqus_thread"></div></div><script type="text/javascript" src="http://disqus.com/forums/smallpict/embed.js"></script></div>
+					<div class="divByline" id="idByline">By <a href="" target="_blank">Kevin Raymond</a>, <span id="idWhenCreated">Saturday, July  5, 2014 at  1:05 PM</span>.</div>
 					</div>
 				</div>
 			</div>
