--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		var pagetable = {
     "opmlUrl": "https://dl.dropbox.com/s/gm4gdb9hout8unx/myBlog.opml",
     "opmlTitle": "KR Blog",
-    "opmlDateModified": "Tue, 08 Jul 2014 14:54:33 GMT",
-    "opmlExpansionState": "1,2,3,4,16,17,22,23,24",
+    "opmlDateModified": "Mon, 14 Jul 2014 15:17:20 GMT",
+    "opmlExpansionState": "1,2,3,8,9,14,15,16",
     "opmlLink": "http://kevinraymond.smallpict.com/",
     "opmlFlCmsRender": "true",
     "opmlFlCmsRenderInBackground": "true",
@@ -43,7 +43,7 @@
     "domain": "",
     "bootstrapTheme": "readable",
     "type": "bloghome",
-    "slogan": "Shut up and eat your vegetables.",
+    "slogan": "Ask not what the Internet can do for you.",
     "disqusGroupName": "smallpict",
     "siteTimeZone": "-5",
     "dateFormat": "%A, %B %e, %Y at %l:%M %p",
@@ -67,7 +67,7 @@
     "flFixedMenu": "false",
     "maxStreamDays": "14",
     "text": "Kevin Raymond's Blog",
-    "created": "Tue, 08 Jul 2014 14:54:33 GMT",
+    "created": "Mon, 14 Jul 2014 15:17:20 GMT",
     "description": "",
     "path": "",
     "subheadColor": "white",
@@ -85,7 +85,7 @@
     "flEmojify": "true",
     "cssUrl": "http://static.smallpicture.com/bootswatch/readable/bootstrap.min.css",
     "menuTitle": "Kevin Raymond's Blog",
-    "now": "Tue Jul 08 2014 10:54:34 GMT-0400 (EDT)",
+    "now": "Mon Jul 14 2014 11:17:21 GMT-0400 (EDT)",
     "copyright": "&copy; 2014 Kevin Raymond.",
     "url": "http://kevinraymond.smallpict.com/.html"
 }; //12/12/13 by DW
@@ -383,9 +383,9 @@
 
 				<div class="divFooterText">
 					<hr>
-					<p style="float: right;">Last built: Tue, Jul  8, 2014 at  9:54 AM</p>
-					<script>var disqus_identifier = "https://dl.dropbox.com/s/gm4gdb9hout8unx/myBlog.opmlTue, 08 Jul 2014 14:54:33 GMT";</script><a onclick="showHideComments ()"><span id="idShowHideComments" style="cursor: pointer;"></span></a><div class="divDisqusComments" id="idDisqusComments" style="visibility: visible;" ><div id="disqus_thread"></div></div><script type="text/javascript" src="http://disqus.com/forums/smallpict/embed.js"></script></div>
-					<div class="divByline" id="idByline">By <a href="" target="_blank">Kevin Raymond</a>, <span id="idWhenCreated">Tuesday, July  8, 2014 at  9:54 AM</span>.</div>
+					<p style="float: right;">Last built: Mon, Jul 14, 2014 at 10:17 AM</p>
+					<script>var disqus_identifier = "https://dl.dropbox.com/s/gm4gdb9hout8unx/myBlog.opmlMon, 14 Jul 2014 15:17:20 GMT";</script><a onclick="showHideComments ()"><span id="idShowHideComments" style="cursor: pointer;"></span></a><div class="divDisqusComments" id="idDisqusComments" style="visibility: visible;" ><div id="disqus_thread"></div></div><script type="text/javascript" src="http://disqus.com/forums/smallpict/embed.js"></script></div>
+					<div class="divByline" id="idByline">By <a href="" target="_blank">Kevin Raymond</a>, <span id="idWhenCreated">Monday, July 14, 2014 at 10:17 AM</span>.</div>
 					</div>
 				</div>
 			</div>
