--- a/myBlog/index.html
+++ b/myBlog/index.html
@@ -18,7 +18,7 @@
 		var pagetable = {
     "opmlUrl": "https://dl.dropbox.com/s/gm4gdb9hout8unx/myBlog.opml?dl=0",
     "opmlTitle": "KR Blog",
-    "opmlDateModified": "Mon, 25 Aug 2014 17:24:15 GMT",
+    "opmlDateModified": "Mon, 25 Aug 2014 19:22:24 GMT",
     "opmlExpansionState": "1,2,3,4,7,8,10,15,16,17",
     "opmlLink": "http://kevinraymond.smallpict.com/",
     "opmlFlCmsRender": "true",
@@ -44,7 +44,7 @@
     "domain": "",
     "bootstrapTheme": "readable",
     "type": "bloghome",
-    "slogan": "It's even worse than it appears.",
+    "slogan": "Still diggin!",
     "disqusGroupName": "smallpict",
     "siteTimeZone": "-5",
     "dateFormat": "%A, %B %e, %Y at %l:%M %p",
@@ -70,7 +70,7 @@
     "flMarkdown": true,
     "leftIndent": 0,
     "text": "Kevin Raymond's Blog",
-    "created": "Mon, 25 Aug 2014 17:24:15 GMT",
+    "created": "Mon, 25 Aug 2014 19:22:24 GMT",
     "description": "",
     "path": "",
     "subheadColor": "white",
@@ -88,7 +88,7 @@
     "flEmojify": "true",
     "cssUrl": "http://static.smallpicture.com/bootswatch/readable/bootstrap.min.css",
     "menuTitle": "Kevin Raymond's Blog",
-    "now": "Mon Aug 25 2014 13:24:16 GMT-0400 (EDT)",
+    "now": "Mon Aug 25 2014 15:22:24 GMT-0400 (EDT)",
     "copyright": "&copy; 2014 Kevin Raymond.",
     "url": "http://kevinraymond.smallpict.com/.html"
 }; //12/12/13 by DW
@@ -396,9 +396,9 @@
 
 				<div class="divFooterText">
 					<hr>
-					<p style="float: right;">Last built: Mon, Aug 25, 2014 at 12:24 PM</p>
-					<script>var disqus_identifier = "https://dl.dropbox.com/s/gm4gdb9hout8unx/myBlog.opml?dl=0Mon, 25 Aug 2014 17:24:15 GMT";</script><a onclick="showHideComments ()"><span id="idShowHideComments" style="cursor: pointer;"></span></a><div class="divDisqusComments" id="idDisqusComments" style="visibility: visible;" ><div id="disqus_thread"></div></div><script type="text/javascript" src="http://disqus.com/forums/smallpict/embed.js"></script></div>
-					<div class="divByline" id="idByline">By <a href="" target="_blank">Kevin Raymond</a>, <span id="idWhenCreated">Monday, August 25, 2014 at 12:24 PM</span>.</div>
+					<p style="float: right;">Last built: Mon, Aug 25, 2014 at  2:22 PM</p>
+					<script>var disqus_identifier = "https://dl.dropbox.com/s/gm4gdb9hout8unx/myBlog.opml?dl=0Mon, 25 Aug 2014 19:22:24 GMT";</script><a onclick="showHideComments ()"><span id="idShowHideComments" style="cursor: pointer;"></span></a><div class="divDisqusComments" id="idDisqusComments" style="visibility: visible;" ><div id="disqus_thread"></div></div><script type="text/javascript" src="http://disqus.com/forums/smallpict/embed.js"></script></div>
+					<div class="divByline" id="idByline">By <a href="" target="_blank">Kevin Raymond</a>, <span id="idWhenCreated">Monday, August 25, 2014 at  2:22 PM</span>.</div>
 					</div>
 				</div>
 			</div>
