--- a/myBlog/index.html
+++ b/myBlog/index.html
@@ -18,8 +18,8 @@
 		var pagetable = {
     "opmlUrl": "https://dl.dropbox.com/s/gm4gdb9hout8unx/myBlog.opml?dl=0",
     "opmlTitle": "KR Blog",
-    "opmlDateModified": "Mon, 25 Aug 2014 19:22:24 GMT",
-    "opmlExpansionState": "1,2,3,4,7,8,10,15,16,17",
+    "opmlDateModified": "Mon, 25 Aug 2014 19:44:25 GMT",
+    "opmlExpansionState": "1,2,3,5,6,8,13,14,15",
     "opmlLink": "http://kevinraymond.smallpict.com/",
     "opmlFlCmsRender": "true",
     "opmlFlCmsRenderInBackground": "true",
@@ -34,7 +34,7 @@
     "opmlTypeInsertedNode": "",
     "opmlWordpressBlogUrl": "",
     "opmlDescription": "",
-    "opmlLastCursor": "5",
+    "opmlLastCursor": "2",
     "opmlDateCreated": "",
     "opmlOwnerEmail": "",
     "opmlOwnerId": "",
@@ -44,7 +44,7 @@
     "domain": "",
     "bootstrapTheme": "readable",
     "type": "bloghome",
-    "slogan": "Still diggin!",
+    "slogan": "Ask not what the Internet can do for you.",
     "disqusGroupName": "smallpict",
     "siteTimeZone": "-5",
     "dateFormat": "%A, %B %e, %Y at %l:%M %p",
@@ -70,7 +70,7 @@
     "flMarkdown": true,
     "leftIndent": 0,
     "text": "Kevin Raymond's Blog",
-    "created": "Mon, 25 Aug 2014 19:22:24 GMT",
+    "created": "Mon, 25 Aug 2014 19:44:25 GMT",
     "description": "",
     "path": "",
     "subheadColor": "white",
@@ -88,7 +88,7 @@
     "flEmojify": "true",
     "cssUrl": "http://static.smallpicture.com/bootswatch/readable/bootstrap.min.css",
     "menuTitle": "Kevin Raymond's Blog",
-    "now": "Mon Aug 25 2014 15:22:24 GMT-0400 (EDT)",
+    "now": "Mon Aug 25 2014 15:44:25 GMT-0400 (EDT)",
     "copyright": "&copy; 2014 Kevin Raymond.",
     "url": "http://kevinraymond.smallpict.com/.html"
 }; //12/12/13 by DW
@@ -174,6 +174,8 @@
 		<p>Yet another test to set up a new blog <img title=':blush:' alt=':blush:' class='emoji' src='http://fargo.io/code/emojify/images/emoji/blush.png' align='absmiddle' /></p>
 
 <p>Now I have to remember how to set the blog up again.</p>
+
+<p>Still trying to get this blog up and running again.</p>
 		<div class="divBlogHomeStoryDate">
 			<span class="spFargoStoryDate">08/24/14; 07:16:38 PM</span>
 			<div class="divFargoStoryLink" style="float: left;"><a href="2014/08/24/testingMyGithubPage.html"><i class="fa fa-star"></i></a></div>
@@ -396,9 +398,9 @@
 
 				<div class="divFooterText">
 					<hr>
-					<p style="float: right;">Last built: Mon, Aug 25, 2014 at  2:22 PM</p>
-					<script>var disqus_identifier = "https://dl.dropbox.com/s/gm4gdb9hout8unx/myBlog.opml?dl=0Mon, 25 Aug 2014 19:22:24 GMT";</script><a onclick="showHideComments ()"><span id="idShowHideComments" style="cursor: pointer;"></span></a><div class="divDisqusComments" id="idDisqusComments" style="visibility: visible;" ><div id="disqus_thread"></div></div><script type="text/javascript" src="http://disqus.com/forums/smallpict/embed.js"></script></div>
-					<div class="divByline" id="idByline">By <a href="" target="_blank">Kevin Raymond</a>, <span id="idWhenCreated">Monday, August 25, 2014 at  2:22 PM</span>.</div>
+					<p style="float: right;">Last built: Mon, Aug 25, 2014 at  2:44 PM</p>
+					<script>var disqus_identifier = "https://dl.dropbox.com/s/gm4gdb9hout8unx/myBlog.opml?dl=0Mon, 25 Aug 2014 19:44:25 GMT";</script><a onclick="showHideComments ()"><span id="idShowHideComments" style="cursor: pointer;"></span></a><div class="divDisqusComments" id="idDisqusComments" style="visibility: visible;" ><div id="disqus_thread"></div></div><script type="text/javascript" src="http://disqus.com/forums/smallpict/embed.js"></script></div>
+					<div class="divByline" id="idByline">By <a href="" target="_blank">Kevin Raymond</a>, <span id="idWhenCreated">Monday, August 25, 2014 at  2:44 PM</span>.</div>
 					</div>
 				</div>
 			</div>
