--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 	<link href="http://static.smallpicture.com/bootswatch/readable/bootstrap.min.css" rel="stylesheet" />
 	<script src="http://static.smallpicture.com/bootstrap/js/jquery-1.9.1.min.js"></script>
 	<script src="http://static.smallpicture.com/bootstrap/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" href="http://static.smallpicture.com/concord-assets/fontawesome/4.0.3/css/font-awesome.min.css">
+	<link rel="stylesheet" href="http://static.smallpicture.com/concord-assets/fontawesome/4.1.0/css/font-awesome.min.css">
 		<!-- useSmallPictStyles -->
 	<link href="http://fargo.io/cms/platform.css?v=0.48" rel="stylesheet">
 	<script src="http://fargo.io/cms/platform.js?v=0.48"></script>
 	<script>
 		var pagetable = {
-    "opmlUrl": "https://dl.dropbox.com/s/gm4gdb9hout8unx/myBlog.opml",
+    "opmlUrl": "",
     "opmlTitle": "KR Blog",
-    "opmlDateModified": "Mon, 14 Jul 2014 15:17:20 GMT",
-    "opmlExpansionState": "1,2,3,8,9,14,15,16",
+    "opmlDateModified": "Mon, 25 Aug 2014 21:05:18 GMT",
+    "opmlExpansionState": "1,2,3,5,6,8,13,14,15",
     "opmlLink": "http://kevinraymond.smallpict.com/",
     "opmlFlCmsRender": "true",
     "opmlFlCmsRenderInBackground": "true",
@@ -34,6 +34,7 @@
     "opmlTypeInsertedNode": "",
     "opmlWordpressBlogUrl": "",
     "opmlDescription": "",
+    "opmlLastCursor": "18",
     "opmlDateCreated": "",
     "opmlOwnerEmail": "",
     "opmlOwnerId": "",
@@ -43,7 +44,7 @@
     "domain": "",
     "bootstrapTheme": "readable",
     "type": "bloghome",
-    "slogan": "Ask not what the Internet can do for you.",
+    "slogan": "Don't slam the door on the way out.",
     "disqusGroupName": "smallpict",
     "siteTimeZone": "-5",
     "dateFormat": "%A, %B %e, %Y at %l:%M %p",
@@ -66,8 +67,10 @@
     "flPgfPermaLinks": false,
     "flFixedMenu": "false",
     "maxStreamDays": "14",
+    "flMarkdown": true,
+    "leftIndent": 0,
     "text": "Kevin Raymond's Blog",
-    "created": "Mon, 14 Jul 2014 15:17:20 GMT",
+    "created": "Mon, 25 Aug 2014 21:05:18 GMT",
     "description": "",
     "path": "",
     "subheadColor": "white",
@@ -85,7 +88,7 @@
     "flEmojify": "true",
     "cssUrl": "http://static.smallpicture.com/bootswatch/readable/bootstrap.min.css",
     "menuTitle": "Kevin Raymond's Blog",
-    "now": "Mon Jul 14 2014 11:17:21 GMT-0400 (EDT)",
+    "now": "Mon Aug 25 2014 17:05:18 GMT-0400 (EDT)",
     "copyright": "&copy; 2014 Kevin Raymond.",
     "url": "http://kevinraymond.smallpict.com/.html"
 }; //12/12/13 by DW
@@ -166,6 +169,18 @@
 					<h2 id="idBlogHomePageTitle">Kevin Raymond's Blog</h2>
 					</div>
 				<div class="divFargoBlogHome">
+	<div class="divBlogHomeItem">
+		<div class="divBlogHomeItemTitle"><a href="2014/08/24/testingMyGithubPage.html">Testing My Github Page</a></div>
+		<p>Yet another test to set up a new blog <img title=':blush:' alt=':blush:' class='emoji' src='http://fargo.io/code/emojify/images/emoji/blush.png' align='absmiddle' /></p>
+
+<p>Now I have to remember how to set the blog up again.</p>
+
+<p>Still trying to get this blog up and running again.</p>
+		<div class="divBlogHomeStoryDate">
+			<span class="spFargoStoryDate">08/24/14; 07:16:38 PM</span>
+			<div class="divFargoStoryLink" style="float: left;"><a href="2014/08/24/testingMyGithubPage.html"><i class="fa fa-star"></i></a></div>
+			</div>
+		</div>
 	<div class="divBlogHomeItem">
 		<div class="divBlogHomeItemTitle"><a href="2014/07/08/amILikeAHorseOnlyOfferingManualLabor.html">Am I Like a Horse, Only Offering Manual Labor?</a></div>
 		<p><center><img src="https://dl.dropbox.com/s/ho1wf669xlbe199/Labor%20Horses.jpg" alt="" title="" /></center></p>
@@ -383,9 +398,9 @@
 
 				<div class="divFooterText">
 					<hr>
-					<p style="float: right;">Last built: Mon, Jul 14, 2014 at 10:17 AM</p>
-					<script>var disqus_identifier = "https://dl.dropbox.com/s/gm4gdb9hout8unx/myBlog.opmlMon, 14 Jul 2014 15:17:20 GMT";</script><a onclick="showHideComments ()"><span id="idShowHideComments" style="cursor: pointer;"></span></a><div class="divDisqusComments" id="idDisqusComments" style="visibility: visible;" ><div id="disqus_thread"></div></div><script type="text/javascript" src="http://disqus.com/forums/smallpict/embed.js"></script></div>
-					<div class="divByline" id="idByline">By <a href="" target="_blank">Kevin Raymond</a>, <span id="idWhenCreated">Monday, July 14, 2014 at 10:17 AM</span>.</div>
+					<p style="float: right;">Last built: Mon, Aug 25, 2014 at  4:05 PM</p>
+					<script>var disqus_identifier = "Mon, 25 Aug 2014 21:05:18 GMT";</script><a onclick="showHideComments ()"><span id="idShowHideComments" style="cursor: pointer;"></span></a><div class="divDisqusComments" id="idDisqusComments" style="visibility: visible;" ><div id="disqus_thread"></div></div><script type="text/javascript" src="http://disqus.com/forums/smallpict/embed.js"></script></div>
+					<div class="divByline" id="idByline">By <a href="" target="_blank">Kevin Raymond</a>, <span id="idWhenCreated">Monday, August 25, 2014 at  4:05 PM</span>.</div>
 					</div>
 				</div>
 			</div>
